# my-travel-blog

./: .gitignore  .pre-commit-config.yaml  db.sqlite3  makefile  manage.py  pyproject.toml  readme.md
my_travel_blog/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
my_travel_blog/static/my_travel_blog/: style.css
my_travel_blog/templates/: base.html
my_travel_blog/templates/components/: footer.html
trips/: admin.py  enums.py  models.py  urls.py  views.py
trips/migrations/: 0001_initial.py
trips/templates/: basic.html  trip_page.html
users/: urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/: users.html
