[project]
name = "my-travel-blog"
version = "0.1.0"
description = "Django travel blog"
authors = [
    {name = "nehakerung",email = "nehakerung@gmail.com"}
]
readme = "README.md"
package-mode = false
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.4,<6.0.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "mysqlclient (>=2.2.7,<3.0.0)",
    "mysql (>=0.0.3,<0.0.4)",
    "pymysql (>=1.1.1,<2.0.0)",
    "cryptography (>=45.0.5,<46.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.7"
black = "^25.1.0"
pre-commit = "^4.2.0"

